Fix names of body and return object
